--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,6 +12,9 @@
 header{
     background-color: #FFF8F3;
     padding-top: 50px;
+    background: url(/images/developer.png), url(/images/header_bg.png), #FFF8F3 ;
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
 .btn{
     background-color: #FD6E0A;
@@ -21,6 +24,7 @@ header{
     font-size: 20px;
     font-weight: bold;
     color: white;
+    cursor: pointer;
 }
 .logo h2{
     font-size: 45px;
@@ -50,4 +54,41 @@ nav .menu{
     font-size: 20px;
     color: #474747;
     text-decoration: none;
+ }
+
+ #banner{
+    /* border: 1px solid red; */
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ #banner .banner-content{
+    max-width: 585px;
+ }
+
+ #banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+ }  
+ #banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color:  #3b1d1d;
+    margin-bottom: 20px;
+ }
+
+ #banner .banner-content p{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+ }
+
+ #banner .banner-image{
+    max-width: 585px;
+    vertical-align: middle;
  }
